fix filter bullets

--- a/views/feed.handlebars
+++ b/views/feed.handlebars
@@ -42,7 +42,7 @@
                     <div class="flex flex-col max-w-sm px-4 py-6 mx-auto bg-white rounded-lg shadow-md">
                         <ul>
                             {{#each rhythmSet as |rhythm| }}                        
-                            <li>
+                            <li style="list-style:none">
                                 <label class="inline-flex items-center mt-3">
                                     <input id='rhythmFilter' data-value='{{id}}' type="checkbox" class="form-checkbox h-5 w-5 text-gray-600"><span class="ml-2 text-gray-700">{{rhythm.name}}</span>
                                 </label>
